Implement option to have mocked IPFS service provider (#7)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-IPFS_PROTOCOL=http
-IPFS_HOST=localhost
-IPFS_PORT=9094
+IPFS_PROTOCOL=
+IPFS_HOST=
+IPFS_PORT=
 # <username:password>
-IPFS_AUTH=wingriders_ipfs:password
+IPFS_AUTH=
