--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         run: bun install
 
       - name: Run lint
-        run: bun run lint
+        run: bun run check
 
       - name: Run build
         run: bun run build
