--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check": "bun biome check src",
+    "fix": "bun run check --write",
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.4",
     "axios": "^1.7.9",
     "file-type": "^19.6.0",
     "ipfs-only-hash": "^4.0.0",
@@ -20,13 +22,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
     "typescript": "^5"
   }
 }
