--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
   },
   "dependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
+    "@mui/material-nextjs": "^6.3.1",
+    "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "file-type": "^19.6.0",
     "ipfs-only-hash": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
