--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "check": "bun biome check {src,test}",
     "fix": "bun run check --write",
-    "test": "bun test",
-    "test:watch": "bun test --watch"
+    "test": "bun run vitest --run",
+    "test:watch": "bun vitest"
   },
   "dependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -30,11 +30,19 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "@vitejs/plugin-react": "^4.3.4",
+    "dotenv": "^16.4.7",
+    "jsdom": "^26.0.0",
+    "typescript": "^5",
+    "vitest": "^3.0.4"
   }
 }
