--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
+    "form-data": "^4.0.1",
     "jsdom": "^26.0.0",
     "typescript": "^5",
     "vitest": "^3.0.4"
