--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           bun-version: 1.1.43
 
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 22.13.1
+
       - name: Install dependencies
         run: bun install
 
@@ -32,4 +37,4 @@ jobs:
         run: bun run build
 
       - name: Run test
-        run: bun run test
+        run: npm run test
