--- a/package.json
+++ b/package.json
@@ -17,19 +17,26 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@meshsdk/core": "^1.9.0-beta.0",
+    "@meshsdk/core-csl": "^1.9.0-beta.3",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/material-nextjs": "^6.3.1",
     "@tanstack/react-query": "^5.64.2",
+    "@wingriders/apply-params-to-script": "^0.1.2",
     "axios": "^1.7.9",
+    "bignumber.js": "^9.1.2",
+    "borc": "^3.0.0",
+    "date-fns": "^4.1.0",
     "file-type": "^19.6.0",
     "ipfs-only-hash": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "15.1.4",
+    "pluralize": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
@@ -41,12 +48,14 @@
     "@types/bun": "latest",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
     "form-data": "^4.0.1",
     "jsdom": "^26.0.0",
+    "type-fest": "^4.33.0",
     "typescript": "^5",
     "vitest": "^3.0.4"
   }
