--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@mui/x-date-pickers": "^7.26.0",
     "@tanstack/react-query": "^5.64.2",
     "@wingriders/apply-params-to-script": "^0.1.2",
     "axios": "^1.7.9",
