--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
+    "blakejs": "^1.2.1",
     "dotenv": "^16.4.7",
     "form-data": "^4.0.1",
+    "happy-dom": "^17.1.1",
     "jsdom": "^26.0.0",
     "type-fest": "^4.33.0",
     "typescript": "^5",
