--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,12 +20,7 @@ jobs:
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
         with:
-          bun-version: 1.1.43
-
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 22.13.1
+          bun-version: 1.2.3
 
       - name: Install dependencies
         run: bun install
@@ -37,4 +32,4 @@ jobs:
         run: bun run build
 
       - name: Run test
-        run: npm run test
+        run: bun run test
