--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "file-type": "^19.6.0",
     "ipfs-only-hash": "^4.0.0",
     "lodash": "^4.17.21",
-    "next": "15.1.4",
+    "next": "15.1.9",
     "pluralize": "^8.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "uuid": "^11.0.5",
@@ -46,7 +46,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/bun": "latest",
+    "@types/bun": "^1.3.3",
     "@types/lodash": "^4.17.14",
     "@types/pluralize": "^0.0.33",
     "@types/react": "^19",
